# transformator_decomposer

./: .gitignore  README.md  linux.spec  linux_kst.spec  linux_kvkz.spec  main.py  main_kst.py  main_kvkz.py  pyproject.toml  windows.spec  windows_kst.spec  windows_kvkz.spec
.github/workflows/: build.yml
core/: decompose.py  parameters.py  service.py
ui/: ui2py.py
ui/qt_ui/: ui_data_select.ui  ui_data_view.ui  ui_drow_select.ui  ui_mainwindow.ui  ui_passport_params.ui  ui_source_params.ui
ui/src/: ui_data_select.py  ui_data_view.py  ui_drow_select.py  ui_mainwindow.py  ui_passport_params.py  ui_source_params.py
